fixed input text size for getSources

--- a/modules/KalturaSupport/standAloneTests/kWidget.getSources.html
+++ b/modules/KalturaSupport/standAloneTests/kWidget.getSources.html
@@ -6,7 +6,7 @@
 	This script enables you to generate stand alone video tags using kaltura entries. <br>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script type="text/javascript" src="../../../docs/js/doc-bootstrap.js"></script>
-	partnerId : <input id="partnerId" type="text" value="243342" size="5" style="width:100px"> entryId: <input id="entryId" type="text" value="0_c0r624gh" size="8" style="width:100px"><br/>
+	partnerId : <input id="partnerId" type="text" value="243342" size="5" style="width:100px;height:20px"> entryId: <input id="entryId" type="text" value="0_c0r624gh" size="8" style="width:100px;height:20px"><br/>
 	<input class="btn" id="getSources" type="button" value="get sources"/>
 	<div id="standAloneVideoTag">
 	</div>
