--- a/modules/KalturaSupport/tests/ThumbnailEmbedManyPlayers.qunit.html
+++ b/modules/KalturaSupport/tests/ThumbnailEmbedManyPlayers.qunit.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Thumbnail Player test</title>
+<title>Thumbnail embed</title>
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
 <script type="text/javascript" src="../../../docs/js/doc-bootstrap.js"></script>
 </head>
 <body>
-<h2> Thumbnail Player test </h2>
+<h2> Thumbnail embed </h2>
 The thumbnail embed method takes the same arguments as "kWidget.embed". 
 Thumbnail embed will pass all the configuration to the kWidget.embed when the user "click" on the play button.
 <pre class="prettyprint linenums">
